Fixed demo layout issues in Edge

--- a/src/demo/components/MeasurementApp.css
+++ b/src/demo/components/MeasurementApp.css
@@ -31,7 +31,6 @@ body {
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
   width: 100%;
 }
 
@@ -40,7 +39,6 @@ body {
   font-size: 9pt;
   text-align: center;
   margin: 0;
-  font-weight: 500;
   width: 100%;
   box-sizing: border-box;
   background-color: rgb(235, 238, 240);
@@ -52,7 +50,6 @@ body {
 /* The goal is that the child div is always square, i.e. the height is equal to the width. */
 .square-parent {
   position: relative;
-  width: 100%;
   padding-bottom: 100%;
   height: 0;
 }
@@ -63,8 +60,6 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  display: flex;
-  user-select: none;
 }
 
 img {
