--- a/src/demo/components/TitleBar.css
+++ b/src/demo/components/TitleBar.css
@@ -25,7 +25,6 @@
 
 .title-text {
   padding-left: 6px;
-  font-weight: 500;
   font-size: 12pt;
 }
 
